styles/main.css
* {
  box-sizing: border-box;
}

body {
  background-color: #354051;
  font-size: 10px;
  font-weight: bold;
}

.sidebar {
  display: inline-block;
  width: 12.5rem;
  height: 100vh;
  background-color: #354051;
  font-family: 'Titillium Web', sans-serif;
}

.sidebar__top {
  padding-bottom: 1rem;
  border-bottom: 3px solid #303949;
}

.nav__img {
  height: 6rem;
  border-radius: 50%;
  margin: 2rem 3.25rem 1rem;
}

.nav__name {
  color: #9d9bac;
  cursor: pointer;
  font-weight: bold;
  text-align: center;
}

.nav__name:hover {
  color: #fff;
}

.nav__art {
  padding: 1rem 0;
  border-bottom: 3px solid #303949;
}

.nav__categories {
  border-bottom: none;
}

.nav__title {
  padding: .6rem 1rem .2rem 1.4rem;
  color: #707e94;
  font-weight: bold;
}

.nav__li {
  width: 100%;
  height: 1.8rem;
  padding: 0.4rem 0 0 1.4rem;
  color: #9d9bac;
}

.nav__li:hover {
  width: 11.2rem;
  padding-left: 1.2rem;
  border-left: 3px solid #55b9fb;
  background-color: #303949;
  color: #fff;
  cursor: pointer;
}

.nav__checkboxes {
  position: relative;
  display: block;
  padding: 0.4rem 0 0.4rem 1rem;
  color: #9d9bac;
  cursor: pointer;
}

.nav__checkboxes:hover {
  border-left: 4px solid #55b9fb;
  padding-left: 0.75rem;
  color: #fff;
}

main {
  float: right;
  width: calc(100% - 200px);
  background-color: #e7eff1;
  font-family: 'Source Sans Pro', sans-serif;
}

header {
  background-color: #fff;
}

.search {
  display: grid;
  grid-template-columns: 4.5rem auto 4rem 4rem 4rem;
  border-bottom: 2px solid #d9dde3;
  height: 4.4rem;
}

.icon {
  padding: 1.4rem 1rem;
  color: #7b7e87;;
  font-size: 1.5rem;
}

.icon:hover {
  background-color: #1dabec;
  color: #fff;
}

#search__bar--input {
  width: 80%;
  height: 3.9rem;
  border: none;
  font-size: 1rem;
}

#search__bar--input::placeholder {
  color: #b3b5bc;
}

#search__menu--icon {
  padding-right: 2.75rem;
  border-right: 2px solid #D9DDE3;
}
#search__adduser--icon {
  padding-right: 2.75rem;
  border-right: 2px solid  #D9DDE3;
}

#search__calendar--icon {
  padding-right: 2.75rem;
  border-right: 2px solid  #D9DDE3;
}

#search__settings--icon {
  padding-right: 3rem;
}

/*################################################*/
.title {
  position: relative;
  height: 5rem;
  padding-top: 2rem;
  margin-left: 2.8rem;
}

.title__left {
  display: inline-block;
}

.title__left h1 {
  padding-bottom: 0.5rem;
  color: #303949;
  font-size: 1.8rem;
}

.title__left--details {
  color: #999;
}

.title__detail--city {
  display: inline-block;
  padding: 0 0.6rem;
}

.title__location {
  display: inline-block;
  font-size: 0.8rem
}

.title__detail--link {
  display: inline-block;
  padding-left: 0.6rem;
  color: #1dabec;
  cursor: pointer;
}

.title__detail--link:hover {
  color: #4d72be;
}

.title__dot {
  display: inline-block;
  vertical-align: middle;
  font-size: 0.1rem;
}

.title__right {
  position: absolute;
  top: 3rem;
  right: 2.8rem;
}

.green-dot {
  color: #8abf3f;
}

.title__right button {
  width: 2rem;
  height: 2rem;
  padding: 0 0.4rem;
  border-radius: 50px;
  margin-left: 0.2rem;
  color: #7b7e87;
  cursor: pointer;
}

.title__right button:hover {
  background-color: #1dabec;
  color: #fff;
}

#title__right--open {
  width: 5rem;
}
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.links {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: 6rem;
  padding: 3rem 0 4rem 2.8rem;
  border-bottom: 2px solid #D9DDE3;
}

.links__li {
  margin: 1rem 2.8rem 0 0;
  color: #9d9bac;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
}

.links__li:hover {
  padding-bottom: 2.9rem;
  border-bottom: 3px solid #55B9FB;
  color: #303949;
}















/*GRAPHS__________________________*/

.graphs__section { 
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.circle__graph {
  width: 567px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.circle {
  display: inline-block;
  width: 140px;
  height: 140px;
  border: 0.7rem solid;
  background-color: #e7eff1;
  border-radius: 50%;
}

.circlegraph__one {
  border-color: #50b8bd #50b8bd #D9DDE3 #50b8bd;
}

.circlegraph__two {
  border-color: #d9dde3 #d9dde3 #d9dde3 #25a5fa;
}

.circlegraph__three {
  border-color: #d9dde3 #d9dde3 #ac65b2 #d9dde3;
}

.circle__graph--container {
  padding-top: 1.4rem;
}

.circle__graph--num {
  padding-bottom: 0.4rem;
  font-family: 'Titillium Web', sans-serif;
  font-size: 2rem;
  text-align: center;
}

.circle__graph--text {
  font-size: 0.9rem;
  text-align: center;
}

.graph__btn {
  display: block;
  height: 2rem;
  border-radius: 50px;
  padding: 0 1.2rem;
  margin: 20px auto;
  font-size: 0.9rem;
  color: #7b7e87;
  cursor: pointer;
}

.graph__btn:hover {
  background-color: #1dabec;
  color: #fff;
}

.graph__btn--left {
  margin: 2.5rem auto 3rem auto;
}

.bar__graph--section {
  height: 12rem;
}

.bar__graph {
  height: 10rem;
  margin-left: 1rem;
}

.graph__btn--right {
  margin: 2.2rem auto 3rem auto;
}




























/*TABLE```````````````````````````````````````````````````*/

.details {
  display: flex;
  flex-wrap: wrap;
}

.details__table {
  width: 65%;
  height: 30rem;
  margin: 2.8rem 4% 2.8rem 2.8rem;
  background-color: #f5f5f7;
  color: #6c7c95;
}

.details__title {
  background-color: #6c7c95;
  color: #fff;
}

#details__edit {
  padding: 0.5rem 1rem;
  border: none;
  background-color: #7c8ca3;
  color: #fff;
  font-size: 0.9rem;
  font-weight: bold;
}

.fa-pencil-alt {
  padding-right: 0.3rem;
  font-size: 0.8rem;
  vertical-align: top;
}

.row1 {
  width: 14rem;
  padding: 2rem 1rem 2rem 2rem;
  border-bottom: 1px solid #D9DDE3;
  font-weight: bold;
}

.row2 {
  padding: 2rem 2rem 2rem 1rem;
  border-bottom: 1px solid #D9DDE3;
}

.lastrow {
  border-bottom: none;
}

.details__hiring {
  vertical-align: 17px
}

#details__img {
  height: 3rem;
  border-radius: 50px;
}

.tizzy-pic {
  vertical-align: 17px;
  padding-left: 1rem;
}

#details__money {
  color: #303949;
  font-weight: bold;
}

/*+++++++++++++++++++++++++++++++*/
.social__section {
  display: flex;
  flex-wrap: wrap;
  width: 24%;
  padding-top: 2.8rem;
}

.social__btns {
  height: 11.25rem;
}

.social__btns--three {
  width: 100%;
  height: 3.6rem;
  border: none;
  border-radius: 2px;
  margin-bottom: 1.25rem;
  color: #fff;
  cursor: pointer;
  font-size: 1.1rem;
  text-align: left;
}

#btn__facebook {
  background-color: #4d72be;
}

#fb__icon,
#twitter__icon,
#linkedin__icon {
  margin: 0 19% 0 1rem;
}

#btn__twitter {
  background-color: #26a5f6;
}

#btn__linkedin {
  background-color: #1683ba;
}

.social__input--section {
  height: 10.5rem;
}

.social__section--one,
.social__section--two {
  border-bottom: 2px solid #D9DDE3;
}

.social__title {
  margin-top: 2.5rem;
  color: #354051;
  font-size: 1rem;
  font-weight: bold;
}

.fa-paper-plane,
.fa-camera-retro,
.fa-globe {
  margin-right: 1rem;
  height: 1rem;
}

.social__para {
  padding: 1.4rem 0;
  color: #7b7e87;
  font-size: 0.8rem;
}

form {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.social__input {
  width: 78%;
  min-width: 8rem;
  height: 2.4rem;
  padding-left: 1rem;
  background-color: #fff;
  border-radius: 3px;
  border-right: none;
  border-color: #d9dee4;
  font-size: 0.8rem;
}

.social__input::placeholder {
  color: #707e94;
}

#social__input--third {
  width: 18rem;
}

.social__btn--copy {
  width: 21%;
  height: 2.38rem;
  border: none;
  border-radius: 3px;
  color: #fff;
  cursor: pointer;
  background-color: #4fbbbe;
  font-size: 0.8rem;
}























@media (max-width: 1200px) {




  #fb__icon,
  #twitter__icon,
  #linkedin__icon {
    margin: 0 12% 0 1rem;
  }

  .social__input {
    width: 72%;
  }

  #social__input--third {
    width: 100%;
  }
}















































/*colors*/
/*#303949;
#354051;
/*#4D72BE;
#8ABF3F;
#4FBBBE;
#1683BA;
#1DABEC;
#26A5F6;
#55B9FB;
#AEDFFB;
#707E94;
#7A89A2;
#7B7E87;
#999999;
#9D9BAC;
 #b3b5bc;-- bottom border
#D9DEE4; --color of main background
#F5F5F7;

--graph one;
#50B8BD
#D9E4EA
--graph two;
#D9E4EA; 
#25A5FA;
--graph three;
#AC65B2; 
#D9E4EA;
#F9DD34;
#32B5F8;
#E72267;
#1DA78A;
#E7EFF1 e4eaef--BACKGROUND COLOR!!*/

